--- a/app/src/main/res/layout/activity_premium.xml
+++ b/app/src/main/res/layout/activity_premium.xml
@@ -146,7 +146,7 @@
                     android:id="@+id/feature1_expandable_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Open Payments allow you to manage your upcoming bills, set reminders, and track payments."
+                    android:text="Open Payments allow you to manage your upcoming bills, set reminders, track payments and helps you pay on time."
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:visibility="gone"
@@ -404,7 +404,7 @@
                     android:id="@+id/feature4_expandable_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Get timely notifications to ensure you never miss an upcoming payment."
+                    android:text="Get timely notifications via push or in the app to ensure you never miss an upcoming payment."
                     android:textSize="12sp"
                     android:textColor="@android:color/black"
                     android:visibility="gone"
