--- a/app/src/main/res/layout/activity_terms.xml
+++ b/app/src/main/res/layout/activity_terms.xml
@@ -27,10 +27,12 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/btnBackTerms"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintStart_toEndOf="@id/btnBackTerms"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/btnBackTerms"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- Scroll View for Terms and Conditions Text -->
     <ScrollView
@@ -62,7 +64,7 @@
                 \n\n7. Liability\n\nNo Warranty: The application is provided 'as is' without any warranties of any kind. SmartStackBills does not guarantee the accuracy, completeness, or reliability of the application.\nLimitation of Liability: SmartStackBills will not be liable for any damages arising from the use or inability to use the application.
                 \n\n8. Termination\n\nSmartStackBills reserves the right to terminate or suspend access to the application for any user who violates these terms and conditions.
                 \n\n9. Contact Information\n\nFor any questions or concerns regarding these terms and conditions, please contact us at service@smartstackbills.info."
-                android:textSize="16sp"
+                android:textSize="12sp"
                 android:textColor="@android:color/black"/>
 
         </LinearLayout>
