--- a/app/src/main/res/layout/items_spendings.xml
+++ b/app/src/main/res/layout/items_spendings.xml
@@ -27,6 +27,18 @@
 
         <!-- Title Value -->
 
+        <ImageView
+            android:id="@+id/imgRecurringIconSpendings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:contentDescription="@string/recurring"
+            android:visibility="gone"
+            android:src="@drawable/ic_recurring"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgCheckBoxItemsSpendings" />
+
         <!-- Checkbox for marking as paid -->
 
         <!-- Category Label -->
